updated letterboxd script

--- a/kwon.nyc/links/index.html
+++ b/kwon.nyc/links/index.html
@@ -14,7 +14,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300;600&display=swap" rel="stylesheet">
 <link rel="canonical" href="http://kwon.nyc/links/" />
-<link href="/assets/css/stylesheet.min.8bda46b070b634217cf372b0376283a5e14ea62c62d6718cd5c897cdc6e650f9.css" integrity="sha256-i9pGsHC2NCF883KwN2KDpeFOpixi1nGM1ciXzcbmUPk=" rel="preload stylesheet"
+<link href="/assets/css/stylesheet.min.a9e9ed1736994b3cbe8856e9110b045c2f92566edda50b02890e9bfbf59ebefd.css" integrity="sha256-qentFzaZSzy&#43;iFbpEQsEXC&#43;SVm7dpQsCiQ6b&#43;/Wevv0=" rel="preload stylesheet"
     as="style">
 
 
