--- a/kwon.nyc/notes/why-i-quit-medicine/index.html
+++ b/kwon.nyc/notes/why-i-quit-medicine/index.html
@@ -14,7 +14,7 @@ Ten years ago, I decided to be a doctor. It was a decision that made perfect sen
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300;600&display=swap" rel="stylesheet">
 <link rel="canonical" href="http://kwon.nyc/notes/why-i-quit-medicine/" />
-<link href="/assets/css/stylesheet.min.a9e9ed1736994b3cbe8856e9110b045c2f92566edda50b02890e9bfbf59ebefd.css" integrity="sha256-qentFzaZSzy&#43;iFbpEQsEXC&#43;SVm7dpQsCiQ6b&#43;/Wevv0=" rel="preload stylesheet"
+<link href="/assets/css/stylesheet.min.761a96eda272a12c8e30a1a0eb282540207d9e0bee8e5a5c8cd152118918385d.css" integrity="sha256-dhqW7aJyoSyOMKGg6yglQCB9ngvujlpcjNFSEYkYOF0=" rel="preload stylesheet"
     as="style">
 
 
