--- a/kwon.nyc/bike/index.html
+++ b/kwon.nyc/bike/index.html
@@ -15,10 +15,10 @@
       }
     </style>
   </head>
-  <title>kwon.nyc/bike</title>
+  <title>Bike • Kwon.nyc</title>
   <body>
     <div id="content">
-	<iframe style="border: none" width="100%" height="100%" src="https://www.figma.com/file/pXAhY02o72wq79gKN6JS3M/kwon.nyc%2Fbike?embed_host=share&kind=&node-id=70%3A150&page-id=0%3A1&scaling=scale-down-width&starting-point-node-id=30%3A4&viewport=241%2C48%2C0.31"></iframe>
+	<iframe style="border: none" width="100%" height="100%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FpXAhY02o72wq79gKN6JS3M%2Fkwon.nyc-bike%3Fnode-id%3D342%253A24"></iframe>
     </div>
   </body>
 </html>
