--- a/kwon.nyc/bike/index.html
+++ b/kwon.nyc/bike/index.html
@@ -15,7 +15,7 @@
       }
     </style>
   </head>
-  <title>Bike • Kwon.nyc</title>
+  <title>Bike &bull; Kwon.nyc</title>
   <body>
     <div id="content">
 	<iframe style="border: none" width="100%" height="100%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FpXAhY02o72wq79gKN6JS3M%2Fkwon.nyc-bike%3Fnode-id%3D342%253A24"></iframe>
