forgot to build again

--- a/kwon.nyc/about/index.html
+++ b/kwon.nyc/about/index.html
@@ -11,9 +11,10 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="preconnect" href="https://fonts.gstatic.com">
+<link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link href="https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300;600&display=swap" rel="stylesheet">
 <link rel="canonical" href="http://kwon.nyc/about/" />
-<link href="/assets/css/stylesheet.min.69ab2635329c190b0fa403a82fdcf4f720eaa6f6cd11b5165c612e70a04fdf3b.css" integrity="sha256-aasmNTKcGQsPpAOoL9z09yDqpvbNEbUWXGEucKBP3zs=" rel="preload stylesheet"
+<link href="/assets/css/stylesheet.min.4a903fbf518ac67ba6a116b5fd28daf68de8f197b3655263c0f0b4485be4ff3b.css" integrity="sha256-SpA/v1GKxnumoRa1/Sja9o3o8ZezZVJjwPC0SFvk/zs=" rel="preload stylesheet"
     as="style">
 
 
@@ -155,6 +156,7 @@
 <p>In 2016, <a href="https://www.theguardian.com/commentisfree/2016/jun/15/i-quit-medicine-heres-what-future-doctors-should-know">I quit my job</a> as a doctor (specifically, training to be a surgeon), which was one of the most important decisions of my life. It&rsquo;s one of the topics I could talk about for 20 minutes without preparation, which they say is the sign of a thing you&rsquo;re passionate about, or that you&rsquo;re a rambler (I&rsquo;m both 💅).</p>
 <p>These days, I work in digital health, which is really cool, mostly because I get to solve the problems I saw firsthand taking care of patients except at scale.</p>
 <!-- I have removed 122 gallbladders. "Why is that relevant?" you ask. First of all, I don't like your tone. Second of all, good question. It's not. Except sometimes when I get annoyed by someone on the street, I think to myself, "Well, at least I've probably taken out more gallbladders than they have." It is also listed as a fun fact on my <a href="https://www.imdb.com/name/nm9087310/">IMDb page</a>. -->
+<p><a href="/now">Here&rsquo;s what I&rsquo;m doing / feeling / thinking now(ish).</a></p>
 <!-- 
 <figure class="multikwon">
     <img loading="lazy" src="multikwon.jpg"
