--- a/kwon.nyc/notes/power-moves/index.html
+++ b/kwon.nyc/notes/power-moves/index.html
@@ -12,9 +12,10 @@
 It reminded me of the time I was rounding with my interns and medical students in the recovery room after scrubbing out of a long case and I was hungry so I pulled an apple out of my white coat pocket, ate most of it, noticed that there weren&rsquo;t any trash cans close by, and so I ate the core and seeds as well and then deposited the stem in the breast pocket of my white coat to discard later.">
 <meta name="author" content="">
 <link rel="preconnect" href="https://fonts.gstatic.com">
+<link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link href="https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300;600&display=swap" rel="stylesheet">
 <link rel="canonical" href="http://kwon.nyc/notes/power-moves/" />
-<link href="/assets/css/stylesheet.min.69ab2635329c190b0fa403a82fdcf4f720eaa6f6cd11b5165c612e70a04fdf3b.css" integrity="sha256-aasmNTKcGQsPpAOoL9z09yDqpvbNEbUWXGEucKBP3zs=" rel="preload stylesheet"
+<link href="/assets/css/stylesheet.min.4a903fbf518ac67ba6a116b5fd28daf68de8f197b3655263c0f0b4485be4ff3b.css" integrity="sha256-SpA/v1GKxnumoRa1/Sja9o3o8ZezZVJjwPC0SFvk/zs=" rel="preload stylesheet"
     as="style">
 
 
