--- a/kwon.nyc/notes/transferrable-skills/index.html
+++ b/kwon.nyc/notes/transferrable-skills/index.html
@@ -13,9 +13,10 @@
  what are transferrable skills The patient with a tension pneumothorax who couldn&rsquo;t breathe and had impending respiratory failure but refused to sign a consent form for me to place a life-saving chest tube? That&rsquo;s getting buy-in from key stakeholders. The time I went to the diner across the street from the hospital to get a box of sugar to sprinkle on a prolapsed rectum in the ER to help reduce it?">
 <meta name="author" content="">
 <link rel="preconnect" href="https://fonts.gstatic.com">
+<link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link href="https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300;600&display=swap" rel="stylesheet">
 <link rel="canonical" href="http://kwon.nyc/notes/transferrable-skills/" />
-<link href="/assets/css/stylesheet.min.69ab2635329c190b0fa403a82fdcf4f720eaa6f6cd11b5165c612e70a04fdf3b.css" integrity="sha256-aasmNTKcGQsPpAOoL9z09yDqpvbNEbUWXGEucKBP3zs=" rel="preload stylesheet"
+<link href="/assets/css/stylesheet.min.4a903fbf518ac67ba6a116b5fd28daf68de8f197b3655263c0f0b4485be4ff3b.css" integrity="sha256-SpA/v1GKxnumoRa1/Sja9o3o8ZezZVJjwPC0SFvk/zs=" rel="preload stylesheet"
     as="style">
 
 
