--- a/kwon.nyc/404.html
+++ b/kwon.nyc/404.html
@@ -11,9 +11,10 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="preconnect" href="https://fonts.gstatic.com">
+<link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link href="https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300;600&display=swap" rel="stylesheet">
 <link rel="canonical" href="http://kwon.nyc/404.html" />
-<link href="/assets/css/stylesheet.min.69ab2635329c190b0fa403a82fdcf4f720eaa6f6cd11b5165c612e70a04fdf3b.css" integrity="sha256-aasmNTKcGQsPpAOoL9z09yDqpvbNEbUWXGEucKBP3zs=" rel="preload stylesheet"
+<link href="/assets/css/stylesheet.min.4a903fbf518ac67ba6a116b5fd28daf68de8f197b3655263c0f0b4485be4ff3b.css" integrity="sha256-SpA/v1GKxnumoRa1/Sja9o3o8ZezZVJjwPC0SFvk/zs=" rel="preload stylesheet"
     as="style">
 
 
