--- a/kwon.nyc/colophon/index.html
+++ b/kwon.nyc/colophon/index.html
@@ -199,7 +199,7 @@ I don&rsquo;t really use design software to design websites, but I probably shou
     </main><footer class="footer">
     <div class="top">
         <span><a href="http://kwon.nyc/">Kwon.nyc</a> is made by me in Manhattan</span>
-        <span>&copy; 2021 <a href="mailto:rachel@kwon.nyc">Rachel J. Kwon</a></span>
+        <span>&copy; 2021 <a href="mailto:rachel.kwon at gmail.com">Rachel J. Kwon</a></span>
 
     </div>
     <div class="bottom-left">
