--- a/kwon.nyc/notes/newyorkiversary/index.html
+++ b/kwon.nyc/notes/newyorkiversary/index.html
@@ -237,7 +237,7 @@ When I was younger, I didn&rsquo;t think that carefully about my future, which i
     </main><footer class="footer">
     <div class="top">
         <span><a href="http://kwon.nyc/">Kwon.nyc</a> is made by me in Manhattan</span>
-        <span>&copy; 2021 <a href="mailto:rachel@kwon.nyc">Rachel J. Kwon</a></span>
+        <span>&copy; 2021 <a href="mailto:rachel.kwon at gmail.com">Rachel J. Kwon</a></span>
 
     </div>
     <div class="bottom-left">
