--- a/kwon.nyc/notes/power-moves/index.html
+++ b/kwon.nyc/notes/power-moves/index.html
@@ -207,7 +207,7 @@ It reminded me of the time I was rounding with my interns and medical students i
     </main><footer class="footer">
     <div class="top">
         <span><a href="http://kwon.nyc/">Kwon.nyc</a> is made by me in Manhattan</span>
-        <span>&copy; 2021 <a href="mailto:rachel@kwon.nyc">Rachel J. Kwon</a></span>
+        <span>&copy; 2021 <a href="mailto:rachel.kwon at gmail.com">Rachel J. Kwon</a></span>
 
     </div>
     <div class="bottom-left">
