--- a/kwon.nyc/notes/transferrable-skills/index.html
+++ b/kwon.nyc/notes/transferrable-skills/index.html
@@ -215,7 +215,7 @@ Tags: Career changing</p>
     </main><footer class="footer">
     <div class="top">
         <span><a href="http://kwon.nyc/">Kwon.nyc</a> is made by me in Manhattan</span>
-        <span>&copy; 2021 <a href="mailto:rachel@kwon.nyc">Rachel J. Kwon</a></span>
+        <span>&copy; 2021 <a href="mailto:rachel.kwon at gmail.com">Rachel J. Kwon</a></span>
 
     </div>
     <div class="bottom-left">
