--- a/kwon.nyc/notes/why-i-quit-medicine/index.html
+++ b/kwon.nyc/notes/why-i-quit-medicine/index.html
@@ -225,7 +225,7 @@ Ten years ago, I decided to be a doctor. It was a decision that made perfect sen
     </main><footer class="footer">
     <div class="top">
         <span><a href="http://kwon.nyc/">Kwon.nyc</a> is made by me in Manhattan</span>
-        <span>&copy; 2021 <a href="mailto:rachel@kwon.nyc">Rachel J. Kwon</a></span>
+        <span>&copy; 2021 <a href="mailto:rachel.kwon at gmail.com">Rachel J. Kwon</a></span>
 
     </div>
     <div class="bottom-left">
