--- a/kwon.nyc/about/index.html
+++ b/kwon.nyc/about/index.html
@@ -12,9 +12,8 @@
 <meta name="author" content="">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
-<link href="https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300;600&display=swap" rel="stylesheet">
 <link rel="canonical" href="http://kwon.nyc/about/" />
-<link href="/assets/css/stylesheet.min.f62151904e7f4c632f3cb01f138723adf27a64ce524a548bcb776dfc4e47d65d.css" integrity="sha256-9iFRkE5/TGMvPLAfE4cjrfJ6ZM5SSlSLy3dt/E5H1l0=" rel="preload stylesheet"
+<link href="/assets/css/stylesheet.min.f6451e85c29c976f2c3ba6f45c2ac307e95993d83bd1fba26e8d708d98ebf740.css" integrity="sha256-9kUehcKcl28sO6b0XCrDB&#43;lZk9g70fuibo1wjZjr90A=" rel="preload stylesheet"
     as="style">
 
 
@@ -166,7 +165,7 @@
 </figure>
  -->
 <p><strong>Professional version:</strong></p>
-<p>Rachel Kwon is a product leader, writer, and a surgeon by training. She currently works as Director of Clinical Product Strategy at Ro, a direct-to-consumer digital health startup. Rachel co-edited and authored <em>50 Studies Every Surgeon Should Know</em> (Oxford University Press) and was a clinical research fellow at the University of Oxford. She lives in Manhattan.</p>
+<p>Rachel Kwon is a product leader, writer, and a surgeon by training. She currently works as Director of Clinical Product Strategy at Ro, a direct-to-consumer digital health startup. Rachel co-edited and authored <em>50 Studies Every Surgeon Should Know</em> (Oxford University Press) and was a clinical research fellow at the University of Oxford. She lives in Brooklyn.</p>
 
   </article>
 
@@ -186,7 +185,7 @@
 
     </main><footer class="footer">
     <div class="top">
-        <span><a href="http://kwon.nyc/">Kwon.nyc</a> is made by me in Manhattan</span>
+        <span><a href="http://kwon.nyc/">Kwon.nyc</a> is made by me in Brooklyn</span>
         <span>&copy; 2021 <a href="mailto:rachel.kwon at gmail.com">Rachel J. Kwon</a></span>
 
     </div>
