--- a/kwon.nyc/colophon/index.html
+++ b/kwon.nyc/colophon/index.html
@@ -15,7 +15,7 @@ I don&rsquo;t really use design software to design websites, but I probably shou
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="http://kwon.nyc/colophon/" />
-<link href="/assets/css/stylesheet.min.f6451e85c29c976f2c3ba6f45c2ac307e95993d83bd1fba26e8d708d98ebf740.css" integrity="sha256-9kUehcKcl28sO6b0XCrDB&#43;lZk9g70fuibo1wjZjr90A=" rel="preload stylesheet"
+<link href="/assets/css/stylesheet.min.0ec5fb2aeb1b3aaf3647e8a231a97fc05af81df49c25406c1006ec2e3531c588.css" integrity="sha256-DsX7KusbOq82R&#43;iiMal/wFr4HfScJUBsEAbsLjUxxYg=" rel="preload stylesheet"
     as="style">
 
 
@@ -151,6 +151,7 @@ I don&rsquo;t really use design software to design websites, but I probably shou
 <header class="header">
     <nav class="nav">
         <div class="logo">
+            <img src="/assets/images/logo.svg" alt="권" /> 
             
             <a href="http://kwon.nyc/" title="Colophon">Kwon.nyc</a>
             
@@ -198,14 +199,14 @@ I don&rsquo;t really use design software to design websites, but I probably shou
     </main><footer class="footer">
     <div class="top">
         <span><a href="http://kwon.nyc/">Kwon.nyc</a> is made by me in Brooklyn</span>
-        <span>&copy; 2021 <a href="mailto:rachel.kwon at gmail.com">Rachel J. Kwon</a></span>
+        <span>&copy; 2022 <a href="mailto:kwon at fastmail.com">Rachel J. Kwon 권어진</a></span>
 
     </div>
     <div class="bottom-left">
         <span><a href="http://kwon.nyc/colophon">Colophon</a></span>
 
         <span><a href="http://kwon.nyc/notes/index.xml">RSS feed</a></span>
-        <span><a href="mailto:rachel@kwon.nyc">Email</a></span>
+        <span><a href="mailto:kwon at fastmail.com">Email</a></span>
     </div>
     <div class="bottom-right">
         <span><a href="https://twitter.com/rjkwon">Twitter</a></span>
