--- a/rafts/about/index.html
+++ b/rafts/about/index.html
@@ -146,8 +146,8 @@
 
   <sidebar>
   	40° 43' 50.1960" N<br />
-  	73° 56' 6.8712" W
-
+  	73° 56' 6.8712" W<br />
+    Brooklyn, New York
   </sidebar>
   
   <figure>
