add last.fm and github to footer; revise colophon

--- a/kwon.nyc/colophon/index.html
+++ b/kwon.nyc/colophon/index.html
@@ -193,7 +193,7 @@ I don&rsquo;t really use design software to design websites, but I probably shou
 
 </section>
 
-<div class="sidebar">A note on privacy and data: I don't use cookies or collect any of your data on this site. I don't sell anything or make any money on this site. I do use a cookie-free analytics platform called Plausible to get basic metrics that I use to make the website better.</div>
+<div class="sidebar">A note on privacy and data: I don't use cookies or collect any of your data on this site. I don't sell anything or make any money on this site. I do use a cookie-free analytics platform called <a href="https://plausible.io/">Plausible</a> for basic metrics. The metrics I am most interested in are referring pages (to see who cares enough to link to this site and to maybe make new friends 😀), and visitor counts in aggregate (to get a sense of how many people are looking at specific things I've written, and, I'll be honest, to get a small but nontoxic ego boost). What I am NOT interested in is tracking what individual visitors are doing.</div>
 
 
     </main><footer class="footer">
@@ -204,14 +204,16 @@ I don&rsquo;t really use design software to design websites, but I probably shou
     </div>
     <div class="bottom-left">
         <span><a href="https://kwon.nyc/colophon">Colophon</a></span>
-
         <span><a href="https://kwon.nyc/notes/index.xml">RSS feed</a></span>
-        <span><a href="mailto:kwon at fastmail.com">Email</a></span>
+        <span><a href="https://github.com/rjkwon/personal">Source</a></span>
+        <span><a href="mailto:kwon at fastmail.com">Email me</a></span>
     </div>
     <div class="bottom-right">
         <span><a href="https://twitter.com/rjkwon">Twitter</a></span>
         <span><a href="https://www.linkedin.com/in/rjkwon/">LinkedIn</a></span>
         <span><a href="https://www.instagram.com/kneeyoncebowls/">Instagram</a></span>
+        <span><a href="https://www.last.fm/user/rjkwon">Last.fm</a></span>
+        
     </div>   
 </footer>
 <a href="#top" aria-label="go to top" title="Go to Top (Alt + G)">
