--- a/kwon.nyc/notes/power-moves/index.html
+++ b/kwon.nyc/notes/power-moves/index.html
@@ -212,14 +212,16 @@ It reminded me of the time I was rounding with my interns and medical students i
     </div>
     <div class="bottom-left">
         <span><a href="https://kwon.nyc/colophon">Colophon</a></span>
-
         <span><a href="https://kwon.nyc/notes/index.xml">RSS feed</a></span>
-        <span><a href="mailto:kwon at fastmail.com">Email</a></span>
+        <span><a href="https://github.com/rjkwon/personal">Source</a></span>
+        <span><a href="mailto:kwon at fastmail.com">Email me</a></span>
     </div>
     <div class="bottom-right">
         <span><a href="https://twitter.com/rjkwon">Twitter</a></span>
         <span><a href="https://www.linkedin.com/in/rjkwon/">LinkedIn</a></span>
         <span><a href="https://www.instagram.com/kneeyoncebowls/">Instagram</a></span>
+        <span><a href="https://www.last.fm/user/rjkwon">Last.fm</a></span>
+        
     </div>   
 </footer>
 <a href="#top" aria-label="go to top" title="Go to Top (Alt + G)">
