update /now page, add mastodon link to footer

--- a/kwon.nyc/notes/language/index.html
+++ b/kwon.nyc/notes/language/index.html
@@ -15,7 +15,7 @@ Okay, so it wasn&rsquo;t earth-shattering. But I thought it was a great example 
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/notes/language/" />
-<link href="/assets/css/stylesheet.min.7f7f441dc6bfe17703a2055fe1a1ff48b3a09e646c2880412ed6acd919ff6000.css" integrity="sha256-f39EHca/4XcDogVf4aH/SLOgnmRsKIBBLtas2Rn/YAA=" rel="preload stylesheet"
+<link href="/assets/css/stylesheet.min.723d9347459070db3248616e1d4d0c9554ba5ca0a631495275e989b31d6bbdd6.css" integrity="sha256-cj2TR0WQcNsySGFuHU0MlVS6XKCmMUlSdemJsx1rvdY=" rel="preload stylesheet"
     as="style">
 
 
@@ -232,9 +232,9 @@ Okay, so it wasn&rsquo;t earth-shattering. But I thought it was a great example 
         <span><a href="mailto:kwon at fastmail.com">Email me</a></span>
     </div>
     <div class="bottom-right">
+        <span><a rel="me" href="https://mastodon.social/@rjkwon">Mastodon</a></span>
         <span><a href="https://twitter.com/rjkwon">Twitter</a></span>
         <span><a href="https://www.linkedin.com/in/rjkwon/">LinkedIn</a></span>
-        <span><a href="https://www.instagram.com/kneeyoncebowls/">Instagram</a></span>
         <span><a href="https://www.last.fm/user/rjkwon">Last.fm</a></span>
         
     </div>   
