--- a/kwon.nyc/about/index.html
+++ b/kwon.nyc/about/index.html
@@ -152,21 +152,11 @@
   </div>
   
   <article id="content">
-    <div class="headline">Hello, I'm Rachel J. Kwon. I am a queer Korean American woman of average height in New York City. Like you, I am also a denizen of the internet.</div>
+    <div class="headline">Hi and welcome to my website. I am a queer Korean American woman of average height in New York City. Like you, I am also a denizen of the internet.</div>
+<p>kwon.nyc is my hobby.</p>
 <p>In 2016, <a href="https://www.theguardian.com/commentisfree/2016/jun/15/i-quit-medicine-heres-what-future-doctors-should-know">I quit my job</a> as a doctor (specifically, training to be a surgeon), which was one of the most important decisions of my life. It&rsquo;s one of the topics I could talk about for 20 minutes without preparation, which they say is the sign of a thing you&rsquo;re passionate about, or that you&rsquo;re a rambler (I&rsquo;m both 💅).</p>
 <p>These days, I work in digital health, which is really cool, mostly because I get to solve the problems I saw firsthand taking care of patients except at scale.</p>
-<!-- I have removed 122 gallbladders. "Why is that relevant?" you ask. First of all, I don't like your tone. Second of all, good question. It's not. Except sometimes when I get annoyed by someone on the street, I think to myself, "Well, at least I've probably taken out more gallbladders than they have." It is also listed as a fun fact on my <a href="https://www.imdb.com/name/nm9087310/">IMDb page</a>. -->
 <p><a href="/now">Here&rsquo;s what I&rsquo;m doing / feeling / thinking now(ish).</a></p>
-<!-- 
-<figure class="multikwon">
-    <img loading="lazy" src="multikwon.jpg"
-         alt="A Photoshopped image of 5 Kwons and one Calla, all wearing various matching sweatsuits, on a grey sectional couch"/> <figcaption>
-            <p>Kwontuplets (and Calla) at home in Tribeca</p>
-        </figcaption>
-</figure>
- -->
-<p><strong>Professional version:</strong></p>
-<p>Rachel Kwon is a product leader, writer, and a surgeon by training. She currently works as Director of Clinical Product Strategy at Ro, a direct-to-consumer digital health startup. Rachel co-edited and authored <em>50 Studies Every Surgeon Should Know</em> (Oxford University Press) and was a clinical research fellow at the University of Oxford. She lives in Brooklyn.</p>
 
   </article>
 
