fixed broken link in notes/logging-tv (thanks amory)

--- a/kwon.nyc/notes/logging-tv/index.html
+++ b/kwon.nyc/notes/logging-tv/index.html
@@ -215,7 +215,7 @@ When I was on the internet in what could be considered my first act (a."/>
 <p>And so on and so forth.</p>
 <p>For now, I&rsquo;ve been tracking my TV watching in a <a href="https://docs.google.com/spreadsheets/d/1KqpD-YJ791NbtK_rGRMQVgh729n7fCu5WZBW3I4hf4k/edit#gid=0">Google spreadsheet</a> which is currently temporarily-but-maybe-semi-permanently serving as the tracker until I can do something cool with it. (I kinda feel like my whole approach to this website is about sharing or documenting things that aren&rsquo;t complete and are far from perfect but meant to capture slices of life, so maybe I&rsquo;ll never do something cool with it but at least it exists.)</p>
 <p>This whole note was a very long and navel-gazey way to say &ldquo;here&rsquo;s a spreadsheet,&rdquo; eh?</p>
-<p>Somewhat related: my note on <a href="http://localhost:1313/notes/re-re-reading/">reading, re-reading, and tracking reads</a></p>
+<p>Somewhat related: my note on <a href="http://kwon.nyc/notes/re-re-reading/">reading, re-reading, and tracking reads</a></p>
 <section class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
