minor css tweaks

--- a/kwon.nyc/404.html
+++ b/kwon.nyc/404.html
@@ -13,7 +13,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="stylesheet" href="https://use.typekit.net/pyn4wgi.css">
 <link rel="canonical" href="https://kwon.nyc/404.html" />
-<link href="/assets/css/stylesheet.min.ea2053628c2b237fb0b8f3adce6467203ef9f8fab5d8af54d165ca7330ede335.css" integrity="sha256-6iBTYowrI3&#43;wuPOtzmRnID75&#43;Pq12K9U0WXKczDt4zU=" rel="preload stylesheet"
+<link href="/assets/css/stylesheet.min.b60fa545b97924426cea467b1233d68c8b9da8a4d0f7c059d3a181a4ddd5546b.css" integrity="sha256-tg&#43;lRbl5JEJs6kZ7EjPWjIudqKTQ98BZ06GBpN3VVGs=" rel="preload stylesheet"
     as="style">
 
 
